--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.1",
     "sequelize": "^5.21.7"
   }
 }
