--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "foundation-sites": "^6.6.3",
+    "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.7"
   }
