--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "foundation-sites": "^6.6.3",
     "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.1",
     "sequelize": "^5.21.7"
   }
 }
